[gd_scene load_steps=7 format=3 uid="uid://baqqko63liodh"]

[ext_resource type="Script" path="res://scenes/entity/tower/common_tower/TowerGunCommon.gd" id="1_rh1x3"]
[ext_resource type="Texture2D" uid="uid://dtk17e4dt06rf" path="res://resources/textures/towers/towerDefense_tile180.png" id="2_6nmyq"]
[ext_resource type="Texture2D" uid="uid://d4dhw074l0hty" path="res://resources/textures/towers/towerDefense_tile249.png" id="3_djcew"]
[ext_resource type="PackedScene" path="res://scenes/entity/tower/shooting/SingleBulletComponent.tscn" id="4_k6yll"]
[ext_resource type="PackedScene" uid="uid://dib2vexou0mhx" path="res://scenes/entity/tower/shooting/AutoloaderBulletComponent.tscn" id="5_2njxk"]
[ext_resource type="PackedScene" uid="uid://byo73u0wq1xgm" path="res://scenes/entity/selection/SelectionRenderer.tscn" id="6_3lfjc"]

[node name="TowerGunCommon" type="Node2D"]
script = ExtResource("1_rh1x3")
rotation_speed_deg = 180
active_range = 200
range_area_node = NodePath("Area2D")
turret_node = NodePath("TowerGun")
selection_renderer_node = NodePath("SelectionRenderer")
icon_image_path = "res://resources/textures/towers/towerDefense_tile249.png"
build_cost = 10

[node name="TowerBase" type="Sprite2D" parent="."]
position = Vector2(32, 32)
texture = ExtResource("2_6nmyq")

[node name="TowerGun" type="Sprite2D" parent="."]
position = Vector2(32, 32)
texture = ExtResource("3_djcew")
offset = Vector2(16, 0)

[node name="GunMuzzle" type="Marker2D" parent="TowerGun"]
position = Vector2(48, 0)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(32, 32)
collision_mask = 3

[node name="TowerGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -16.0
offset_right = 64.0
offset_bottom = 62.0
mouse_filter = 1

[node name="SingleBulletComponent" parent="TowerGUI" instance=ExtResource("4_k6yll")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="AutloaderBulletComponent" parent="TowerGUI" instance=ExtResource("5_2njxk")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
drum_reloading_time = 5
drum_shift_time = 1.0

[node name="SelectionRenderer" parent="." instance=ExtResource("6_3lfjc")]
position = Vector2(32, 32)
